Fix gap penalties select elem being cut off

--- a/src/content/app/tools/blast/components/blast-settings/BlastSettings.scss
+++ b/src/content/app/tools/blast/components/blast-settings/BlastSettings.scss
@@ -42,7 +42,8 @@
   justify-self: end;
 }
 
-.parametersColumn .matrixSetting .select label {
+.parametersColumn .matrixSetting .select label,
+.parametersColumn .gapPenalties .select label {
   grid-template-columns: 140px 110px;
 }
 
